--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,30 @@ footer {
 .card {
   border-radius: 0;
 }
+
+#page-top {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 45px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #FFA500;
+  z-index: 100;
+  display: none;
+}
+
+#page-top a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+@media screen and (max-width:576px) {
+  #page-top {
+    display: block;
+  }
+}
